[package]
name = "sdradrustffi"
version = "0.1.0"
license = "BSD-3"
keywords = ["unsafe", "in-process", "intel-mpk"]
authors = ["Merve Gülmez, merve.gulmez@kuleuven.be"]
homepage = "https://secure-rewind-and-discard.github.io/"
build = "build.rs"

[dependencies]
libc = "*"
bitflags = "1.3.2"
paste = "*"

bincode_v1 = { package = "bincode", version = "1.3.2" , optional = true}
bincode_v2 = { package = "bincode", version = "=2.0.0-rc.3", features = ["serde"], optional = true }

abomonation_v1 = {package = "abomonation", optional = true }
abomonation_v2 = {git = "https://github.com/secure-rewind-and-discard/abomonation.git", package = "abomonation", optional = true }


[features]
abomonation_v1 = ["dep:abomonation_v1"]
abomonation_v2 = ["dep:abomonation_v2"]
bincode_v2 = ["dep:bincode_v2"]
bincode_v1 = ["dep:bincode_v1"]

[lib]
name = "sdradrustffi"
path = "src/lib.rs"



